; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_wpa_helpers.c_wpa_open_ctrl.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_wpa_helpers.c_wpa_open_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_ctrl = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@wpas_ctrl_path = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [39 x i8] c"wpa_command: wpa_ctrl_open(%s) failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.wpa_ctrl* (i8*)* @wpa_open_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.wpa_ctrl* @wpa_open_ctrl(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca [128 x i8], align 16
  %4 = alloca %struct.wpa_ctrl*, align 8
  store i8* %0, i8** %2, align 8
  %5 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %6 = load i32, i32* @wpas_ctrl_path, align 4
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @os_snprintf(i8* %5, i32 128, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %6, i8* %7)
  %9 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %10 = call %struct.wpa_ctrl* @wpa_ctrl_open(i8* %9)
  store %struct.wpa_ctrl* %10, %struct.wpa_ctrl** %4, align 8
  %11 = load %struct.wpa_ctrl*, %struct.wpa_ctrl** %4, align 8
  %12 = icmp eq %struct.wpa_ctrl* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %15 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), i8* %14)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load %struct.wpa_ctrl*, %struct.wpa_ctrl** %4, align 8
  ret %struct.wpa_ctrl* %17
}

declare dso_local i32 @os_snprintf(i8*, i32, i8*, i32, i8*) #1

declare dso_local %struct.wpa_ctrl* @wpa_ctrl_open(i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
